# flexbuff_cleaning

./: .gitignore  README.md  bootstrap_flexbuff_cleaning.sh  pyproject.toml  requirements.txt
docs/: notes.md
scripts/: run_flexbuff_cleaning.py
src/flexbuff_cleaning/: __init__.py  __main__.py  cli.py  fb_cleaner.py  remote_setup.py
tests/: test_smoke.py
